# logos-workshop

./: .gitignore  README.md  cheatsheet.md  workshop.md
.claude/: settings.json
docs/: cheatsheet.md  delivery-guide.md  workshop.md
part1-hello-world/: metadata.json
part1-hello-world-ui/: Main.qml  flake.nix
part2-todo/: CMakeLists.txt  metadata.json
part2-todo-ui/: flake.nix
part2-todo/src/: todo_plugin.cpp  todo_plugin.h
part2-todo/todo-core/: flake.nix
part2-todo/todo-core/src/: todo_interface.h  todo_plugin.cpp  todo_plugin.h
part2-todo/todo-ui/: .gitignore  Main.qml  flake.nix  metadata.json
part3-polling/polling-core/: CMakeLists.txt  flake.nix  metadata.json
part3-polling/polling-ui/: Main.qml  flake.nix  metadata.json
part3-voting/: README.md  flake.nix
part3-voting-ui/: Main.qml  flake.nix  metadata.json
part3-voting/src/: voting_interface.h  voting_plugin.cpp  voting_plugin.h
part3-voting/voting-core/: CMakeLists.txt  metadata.json
part3-voting/voting-ui/: Main.qml  flake.nix
part4-filesharing/: README.md
part4-filesharing/filesharing-core/: CMakeLists.txt  flake.nix  metadata.json
part4-filesharing/filesharing-ui/: Main.qml  flake.nix  metadata.json
part5-onchain-counter/: README.md
part5-onchain-counter/counter-core/: CMakeLists.txt  flake.nix  metadata.json
part5-onchain-counter/counter-program/: .gitignore  Cargo.toml  Makefile  README.md  spel.toml
part5-onchain-counter/counter-program/methods/guest/: Cargo.toml
part5-onchain-counter/counter-ui/: Main.qml  flake.nix  metadata.json
(+14 files in other folders)
